--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ ul li:hover {
   width:50%;
 }
 .window {
-  height:540px;
+  height:580px;
   width:800px;
   background:#fff;
   display:-webkit-box;
@@ -245,7 +245,12 @@ ul li:hover {
   margin: 10px;
 }
 
-@media (max-width: 600px) {
+iframe {
+  width: 100%;
+  height: 90%;
+}
+
+*@media (max-width: 600px) {
   .window {
     width: 100%;
     height: 100%;
